minimum sizes added to some elements (iPhone visibility issue)

--- a/src/Components/HeaderComponents/Header/style.css
+++ b/src/Components/HeaderComponents/Header/style.css
@@ -14,6 +14,8 @@ header {
   -ms-flex-line-pack: center; */
   align-content: center;
   padding: 0 0.5rem;
+  min-width: 0;
+  min-height: 0;
 }
 
 .header--right,
@@ -41,6 +43,8 @@ header {
   -webkit-align-items: center;
   -ms-flex-align: center; */
   align-items: center;
+  min-width: 0;
+  min-height: 0;
 }
 
 .wrapper:hover,
